[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.138.2",
    "passlib[bcrypt]>=1.7.4",
    "psycopg[binary]>=3.3.4",
    "python-dotenv>=1.2.2",
    "python-jose>=3.5.0",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.49.0",
]
